Overview of changes in Glib <next>
==================================

* Correctly handle the boxed type for GError.
* Make the stack handling of some marshallers more robust, in
  preparation for custom Glib::Boxed converters that call back into Perl
  code.

Overview of changes in Glib 1.261 (stable)
==========================================

* Add NEWS entries comparing 1.260 to 1.24x
* Add the 64 bit integer converters to the linker exports
* updated README file similar to Cairo (RT#74870)
* Created %meta_merge which follows v2 of meta-spec

Overview of changes in Glib 1.260 (stable)
==========================================

 Since 1.24x (the previous stable series)
 ----------------------------------------
 * Make Glib::Object ref-counting compatible with perl >= 5.16.
 * Make signal marshalling more thread-safe.
 * Export the constants SOURCE_CONTINUE and SOURCE_REMOVE on request.
 * Create and register a GType for GConnectFlags.
 * Increase compatibility with older perls.

 Since 1.253
 -----------
 * Tell CPAN to ignore POD fragments in Makefile.PL.
 * Document that SOURCE_CONTINUE and _REMOVE can be exported.

Overview of changes in Glib 1.253
=================================

* Export the constants SOURCE_CONTINUE and SOURCE_REMOVE on request.
  (RT #48070)
* Create and register a GType for GConnectFlags.

Overview of changes in Glib 1.252
=================================

* Make the recent thread-safety improvements work for non-threaded perls too.

Overview of changes in Glib 1.251
=================================

* Make signal marshalling more thread-safe.  When a signal handler is invoked
  from a foreign thread without associated Perl interpreter, hand the
  marshalling over to the main loop which in turn later wakes up the main
  thread and lets it handle the request.  Since this approach is experimental,
  there is debug print for now whenever it is used:
    *** GPerl asked to invoke callback from a foreign thread;